2015-03-19  Werner Lemberg  <wl@gnu.org>

	[ftdump] Various minor improvements.

	* src/ftdump.c (name_id): Handle WWS entries also.
	Return NULL for not pre-defined entries.
	(put_ascii): Display characters >= 0x80 as hex escape sequence.
	(Print_Sfnt_Names): Improve output.

2015-03-11  Werner Lemberg  <wl@gnu.org>

	Update to latest FreeType library changes.

	* src/ftcommon.c: s/FT_XFREE86_H/FT_FONT_FORMATS_H/.
	(my_face_requester): s/FT_Get_X11_Font_Format/FT_Get_Font_Format/.

2015-03-07  Werner Lemberg  <wl@gnu.org>

	* src/ftvalid.c: Various minor compiler warning fixes.

2015-03-07  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c: Various minor compiler warning fixes.

	* src/ftcommon.c, src/ftcommon.h (FTDemo_Draw_Index): Change type of
	`gindex' to unsigned.

2015-03-07  Werner Lemberg  <wl@gnu.org>

	* src/ftstring.c: Various minor compiler warning fixes.

2015-03-07  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Various minor compiler warning fixes.

	* src/ftmulti.c: Fix signedness issues.
	Add `static' keyword where appropriate.
	(CENTER_X, CENTER_Y, autorun, use_grays, raster_buff, FLOOR, CEIL,
	TRUNC): Removed.  Unused.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Various minor compiler warning fixes.

	* src/ftgrid.c: Fix signedness issues.
	(event_axis_change, event_font_change): Avoid variable shadowing.
	(CEIL, X_TOO_LONG, Y_TOO_LONG): Removed.  Unused.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	* src/ftgamma.c: Various minor compiler warning fixes.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Various minor compiler warning fixes.

	* src/ftcommon.c: Fix signedness issues.
	(my_face_requester): Remove dead code.
	(FTDemo_Install_Font): Protect against stream failure.
	(string_render_prepare): Add `static' keyword.
	* src/ftcommon.h: Updated.

2015-03-05  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c: Various minor compiler warning fixes.

2015-03-05  Werner Lemberg  <wl@gnu.org>

	[graph] Many compiler warning fixes.
