@@ -1,3 +1,11 @@
+2015-03-29  Werner Lemberg  <wl@gnu.org>
+
+	[ftdump] Display info about MM axes.
+
+	* src/ftdump.c: Include FT_MULTIPLE_MASTERS_H.
+	(Print_MM_Axes): New function.
+	(main): Use it.
+
 2015-03-19  Werner Lemberg  <wl@gnu.org>
 
 	[ftdump] Various minor improvements.
